hphp/test/slow/type_annotation/type_annotation_shape4.php.expectf
Fatal error: class constant D::F1 is not a string or an int and cannot be used as shape field names in %s on line 12
